Fix link line wrapping

--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -5,7 +5,7 @@
 $hover-transition: 200ms ease;
 
 .link {
-  display: inline-block;
+  display: inline;
   text-decoration: none;
   border-radius: size.$border-radius-small;
   color: color.$accent-primary;
